# ito-image

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
skills/product-image-generation/: SKILL.md
source/: 场景.md
source/产品/: MYCENA tote.md  PISTACHIO 2 STRIPED TRUNK.md
source/模特/: 小乔.md  贝拉.md
src/: chat.py  generate_image.py  save_prompts.py
